--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,3 +6,4 @@ body {
 @import 'components/parent';
 @import 'components/childOne';
 @import 'components/childTwo';
+@import 'components/childThree';
