--- a/src/styles/components/_parent.scss
+++ b/src/styles/components/_parent.scss
@@ -7,14 +7,15 @@
     margin: 0 auto;
 }
 .view-button {
-    color: #a4a4a4;
+    color: #fff;
     background: #3498eb;
     margin: 0 0 10px 0;
+    width: 100px;
+    height: 30px;
+    border-radius: 4px;
     box-shadow: none;
+    border: none;
     outline: none;
-    &:hover {
-      font-weight: 700;
-    }
     &:hover,
     &:active,
     &:focus {
