set up print functionality

--- a/src/styles/components/_childThree.scss
+++ b/src/styles/components/_childThree.scss
@@ -1,7 +1,11 @@
 .imageForPrint {
     display: none;
 }
-.report__wrapper {
+.report-hidden {
+    display: none;
+}
+.report-visible {
+    display: block;
     width: 100%;
     max-width: 1000px;
     margin: 0 auto;
