--- a/src/styles/components/_childThree.scss
+++ b/src/styles/components/_childThree.scss
@@ -1,4 +1,4 @@
-.imageForPrint {
+.image-for-print {
     display: none;
 }
 .report-hidden {
@@ -21,4 +21,5 @@
     border: none;
     border-radius: 4px;
     width: 80px;
+    cursor: pointer;
 }
